--- a/responsive.css
+++ b/responsive.css
@@ -3,7 +3,7 @@ body{
 }
 @media screen and (max-width: 600px){
     body{
-        background-color: blue;
+        background-color:whitesmoke;
         h1{
             font-size: 30px;
 
@@ -14,6 +14,11 @@ body{
             height: 50px;
             width: 100px;
             border: 0rcap;
+        }
+    }
+    @media screen and (max-width:700px){
+        h1{
+            color: green;
         }
     }
 }
